test/integration/suites/k8s/conf/spire-server.yaml

# This is the Deployment for the SPIRE server. It waits for SPIRE database to
# initialize and uses the SPIRE healthcheck command for liveness/readiness
# probes.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spire-server
  namespace: spire
  labels:
    app: spire-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spire-server
  template:
    metadata:
      namespace: spire
      labels:
        app: spire-server
    spec:
      serviceAccountName: spire-server
      shareProcessNamespace: true
      containers:
        - name: spire-server
          image: spire-server:latest-local
          imagePullPolicy: Never
          args: ["-config", "/run/spire/config/server.conf"]
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: spire-config
              mountPath: /run/spire/config
              readOnly: true
            - name: spire-server-socket
              mountPath: /run/spire/sockets
              readOnly: false
          livenessProbe:
            exec:
              command: ["/opt/spire/bin/spire-server", "healthcheck", "-registrationUDSPath", "/run/spire/sockets/registration.sock"]
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            exec:
              command: ["/opt/spire/bin/spire-server", "healthcheck", "-registrationUDSPath", "/run/spire/sockets/registration.sock", "--shallow"]
            initialDelaySeconds: 5
            periodSeconds: 5
        - name: k8s-workload-registrar
          image: k8s-workload-registrar:latest-local
          imagePullPolicy: Never
          args: ["-config", "/run/spire/k8s-workload-registrar/conf/k8s-workload-registrar.conf"]
          ports:
          - containerPort: 8443
            name: registrar-port
          volumeMounts:
          - name: spire-server-socket
            mountPath: /run/spire/sockets
            readOnly: true
          - name: k8s-workload-registrar
            mountPath: /run/spire/k8s-workload-registrar/conf
            readOnly: true
          - name: k8s-workload-registrar-certs
            mountPath: /run/spire/k8s-workload-registrar/certs
            readOnly: true
          - name: k8s-workload-registrar-secret
            mountPath: /run/spire/k8s-workload-registrar/secret
            readOnly: true
      volumes:
        - name: spire-config
          configMap:
            name: spire-server
        - name: spire-server-socket
          hostPath:
            path: /run/spire/server-sockets
            type: DirectoryOrCreate
        - name: k8s-workload-registrar
          configMap:
            name: k8s-workload-registrar
        - name: k8s-workload-registrar-certs
          configMap:
            name: k8s-workload-registrar-certs
        - name: k8s-workload-registrar-secret
          secret:
            secretName: k8s-workload-registrar-secret

---

# Service definition for SPIRE server defining the gRPC port.
apiVersion: v1
kind: Service
metadata:
  name: spire-server
  namespace: spire
spec:
  type: NodePort
  ports:
    - name: grpc
      port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: spire-server

---

# Service definition for the admission webhook
apiVersion: v1
kind: Service
metadata:
  name: k8s-workload-registrar
  namespace: spire
spec:
  selector:
    app: spire-server
  ports:
    - port: 443
      targetPort: registrar-port

---

# Validating Webhook Configuration for the K8S Workload Registrar
#
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: k8s-workload-registrar-webhook
webhooks:
  - name: k8s-workload-registrar.spire.svc
    clientConfig:
      service:
        name: k8s-workload-registrar
        namespace: spire
        path: "/validate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJnVENDQVNpZ0F3SUJBZ0lJVkx4YkhiUXNaUU13Q2dZSUtvWkl6ajBFQXdJd0pERWlNQ0FHQTFVRUF4TVoKU3poVElGZFBVa3RNVDBGRUlGSkZSMGxUVkZKQlVpQkRRVEFnRncweE9UQTFNVE14T1RFME1qTmFHQTg1T1RrNQpNVEl6TVRJek5UazFPVm93SkRFaU1DQUdBMVVFQXhNWlN6aFRJRmRQVWt0TVQwRkVJRkpGUjBsVFZGSkJVaUJEClFUQlpNQk1HQnlxR1NNNDlBZ0VHQ0NxR1NNNDlBd0VIQTBJQUJKTnE3SUw3N1hXaVdib2hCT3NtckNLTWorZzMKei8rVTBjNUhtWFJqN2xiU3Bqb2ZTMFkxUmtUSE1FSlN2QW9NSHpzc0NlNS9NRE1IWDVYbm40ci9MU0dqUWpCQQpNQTRHQTFVZER3 [...]
    admissionReviewVersions:
    - v1beta1
    rules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "DELETE"]
      resources: ["pods"]
      scope: "Namespaced"
